--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -14,16 +14,16 @@
 	},
 	"devDependencies": {
 		"@ark-ui/solid": "^4.3.0",
-		"@corvu/drawer": "^0.2.2",
+		"@corvu/drawer": "^0.2.4",
 		"@corvu/otp-field": "^0.1.3",
 		"@corvu/resizable": "^0.2.3",
-		"@kobalte/core": "^0.13.7",
+		"@kobalte/core": "^0.13.10",
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk-solid": "^1.1.0",
 		"embla-carousel-autoplay": "8.3.1",
-		"embla-carousel-solid": "8.3.1",
+		"embla-carousel-solid": "^8.6.0",
 		"postcss": "^8.4.47",
 		"solid-js": "^1.9.3",
 		"solid-sonner": "^0.2.8",
