--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "packageManager": "bun",
+  "packageManager": "bunx",
   "globalDependencies": [
     "**/.env.*local"
   ],
